[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quilter"
authors = [{name = "Jason Klein", email = "kleinjason234@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "pillow",
    "opencv-python",
    "opencv-contrib-python"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing"
]
